<resources>
    <string name="app_name">cronoRGB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="tiempo_total">Tiempo Total :</string>
    <string name="tiempo_parado">Tiempo Pausado:</string>
    <string name="tiempo_corriendo">Tiempo Corriendo:</string>
    <string name="tiempo_pausado">Tiempo Pausado:</string>

    <string name="reanudar">Reanudar</string>
    <string name="iniciar">Iniciar</string>
    <string name="terminar">Terminar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="finalizar">Finalizar</string>
    <string name="parar">Parar</string>
    <string name="tiempo_inicial">0:00:00.00</string>

    <string name="temp">Temporizador</string>


</resources>