<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tempo">

    <EditText
        android:id="@+id/editTIni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/tiempo_inicial"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tiempo_parado"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/temp"
            android:textSize="24sp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#ff22ee22"
            android:textSize="24sp"
            tools:ignore="TextViewEdits" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btIniciar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iniciar"
            android:textAllCaps="false"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btParar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/parar"
            android:textAllCaps="false"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btFinalizar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/finalizar"
            android:textAllCaps="false"
            android:textSize="26sp" />

    </LinearLayout>
</LinearLayout>