<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crono">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tiempo_total"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tiempo_total"
                android:textSize="20sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/contador_total"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tiempo_inicial"
                android:textColor="#ff22ee22"
                android:textSize="24sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tiempo_corriendo"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tiempo_corriendo"
                android:textSize="20sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/contador_corriendo"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tiempo_inicial"
                android:textColor="#ff22ee22"
                android:textSize="24sp"
                tools:ignore="TextViewEdits" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tiempo_parado"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tiempo_parado"
                android:textSize="20sp"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/contador_pausa"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tiempo_inicial"
                android:textColor="#ff22ee22"
                android:textSize="24sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/btIniciar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iniciar"
            android:textAllCaps="false"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btParar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/parar"
            android:textAllCaps="false"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btFinalizar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/finalizar"
            android:textAllCaps="false"
            android:textSize="26sp" />

    </LinearLayout>
</LinearLayout>